--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
   "author": "jcaviedesc",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
